# jax-optimization-comparison

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml
scripts/: run_boc.sh  run_multirun.sh  run_multirun_models.sh  run_multirun_population.sh  run_multirun_seed.sh  run_tensorboard.sh
src/jax_optim_env/configs/: cma_es.yaml  cma_es_exp.yaml  default.yaml  es_exp.yaml  open_es.yaml  sgd_exp.yaml  simple_ga_exp.yaml
src/jax_optim_env/configs/dataset/: pmlb_mushroom.yaml  pmlb_penguins.yaml
src/jax_optim_env/configs/loss/: binary_cross_entropy.yaml  cross_entropy.yaml  mse.yaml
src/jax_optim_env/configs/model/: linear.yaml  mlp.yaml  mlp_2_layers_5.yaml  mlp_3_layers_5.yaml
src/jax_optim_env/configs/optimizer/: adam.yaml  cma_es.yaml  particle_swarm.yaml  simple_ga.yaml
src/jax_optim_env/configs/trainer/: default_trainer.yaml  es_trainer.yaml  sgd_trainer.yaml
src/jax_optim_env/datasets/: default.py  pmlb.py
src/jax_optim_env/models/: linear.py
src/jax_optim_env/tools/: train.py  verify_ig.py  verify_saliency.py
src/jax_optim_env/trainers/: default_trainer.py  es_trainer.py  sgd_trainer.py
src/jax_optim_env/utils/: checkpointing.py  explainability.py  loss.py  metrics.py
src/jax_optimization_comparison/: flax_mlp.py
src/jax_optimization_comparison/configs/: default.yaml  nyu_depth_test.yaml
src/jax_optimization_comparison/configs/dataset/: pmlb_mushroom.yaml
src/jax_optimization_comparison/datasets/: base.py  cv.py
src/jax_optimization_comparison/models/: linear.py
src/jax_optimization_comparison/tools/: train.py
src/jax_optimization_comparison/trainers/: default_trainer.py
tests/: test_checkpointing.py  test_metrics.py
