[project]
dependencies = ["jax[cuda13]>=0.8.2,<0.9", "flax>=0.12.2,<0.13", "evosax>=0.2.0,<0.3", "pmlb==1.0.1.post3"]
name = "jax-optim-env"
requires-python = "== 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[system-requirements]
cuda = "12.4"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
jax_optim_env = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
h5py = ">=3.15.1,<4"
hydra-core = ">=1.3.2,<2"
scikit-learn = ">=1.8.0,<2"
pytorch = ">=2.10.0,<3"
