[project]
dependencies = ["jax[cuda12]>=0.8.2,<0.9", "flax>=0.12.2,<0.13", "evosax>=0.2.0,<0.3", "pmlb==1.0.1.post3", "tensorflow>=2.20.0,<3"]
name = "jax-optim-env"
requires-python = "== 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[system-requirements]
cuda = "12.4"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
jax_optim_env = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
h5py = ">=3.15.1,<4"
hydra-core = ">=1.3.2,<2"
scikit-learn = ">=1.8.0,<2"
pytorch = ">=2.10.0,<3"
tensorboard = ">=2.20.0,<3"
lerna = ">=2.0.3,<3"
setuptools = "<82.0.0"
pytest = ">=9.0.2,<10"
